--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(lib/ADC)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_libraries(${PROJECT_NAME} lib/ADC)
+target_link_libraries(${PROJECT_NAME} ADC)
